--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,10 @@ torch == 2.3.1
 transformers >= 4.41.2
 accelerate >= 0.26.0
 scikit-learn
+peft
+seaborn 
+tensorboardX
 
 
 # python spec
-logging
+# logging
