--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,6 @@ pandas
 datasets
 matplotlib
 
-
-
 # ML Dependencies
 torch == 2.3.1
 transformers >= 4.41.2
@@ -15,6 +13,8 @@ peft
 seaborn 
 tensorboardX
 
+# python command 
+upycli
 
 # python spec
 # logging
