--- a/config/with_pretraining/config.yaml
+++ b/config/with_pretraining/config.yaml
@@ -3,27 +3,30 @@
 # for the classification is not needed 
 
 pretraining: 
-  model_to_pretrain: "roberta-base"
+  model_to_pretrain: "roberta-large"
   dataset_path: "data/public_data/train/track_a/eng.csv"
-  training_set_split: 0.8
-  extended_dataset: False 
-
   training:
-    train_epochs: 1
+    train_epochs: 50
     learning_rate: 0.00002 
     weight_decay: 0.01 
 
 classification: 
   dataset_path: "data/public_data/train/track_a/eng.csv"
   training_set_split: 0.8
-  custom: False # if custom is true an additional parameter "classifier_size" should be specified
-  extended_dataset: False 
+  custom: True # if custom is true an additional parameter "classifier_size", "drop_out_ratge", "head_type", "attention_dim", "num_attention_heads" and "classification_layer_count" have to be specified
+  classifier_size: 768
+  drop_out_rate: 0.1
+  head_type: "fc" # "fc" or "attention" are valid values 
+  attention_dim: 128 
+  num_attention_heads: 1
+  classification_layer_count: 
+  extended_dataset: False # if extended_dataset is True an additional parameter "extended_split" has to be added 
   freeze_layers: False 
   freeze_to_layer: 12
   loRa: False 
 
   training:
-    train_epochs: 10
+    train_epochs: 30
     learning_rate: 0.00002
     per_device_train_batch_size: 6
     per_device_eval_batch_size: 6
