--- a/config/load_pretrained_model/config.yaml
+++ b/config/load_pretrained_model/config.yaml
@@ -3,11 +3,18 @@
 # is needed 
 
 classification: 
-  dataset_path: "data/public_data/train/track_a/eng.csv"
+  dataset_path: "data/track_a/train/eng.csv"
+  pretrained_model: "roberta-base"
   training_set_split: 0.8
-  pretrained_model: "results/pretraining/roberta-large_2025-01-31_21-11-24/best_model"
-  custom: False 
-  extended_dataset: False 
+  custom: True # if custom is true an additional parameter "classifier_size", "dropout_rate", "head_type", "attention_dim", "num_attention_heads" and "classification_layer_count" have to be specified
+  classifier_size: 768
+  dropout_rate: 0.1
+  head_type: "fc" # "fc" or "attention" are valid values 
+  attention_dim: 128 
+  num_attention_heads: 1
+  classification_layer_count: 4
+  extended_dataset: True # if extended_dataset is True an additional parameter "extended_split" has to be added 
+  extended_split: 0.2
   freeze_layers: False 
   freeze_to_layer: 12
   loRa: False 
@@ -15,7 +22,7 @@ classification:
   training:
     train_epochs: 30
     learning_rate: 0.00002
-    per_device_train_batch_size: 6
-    per_device_eval_batch_size: 6
+    per_device_train_batch_size: 32
+    per_device_eval_batch_size: 32
     warmup_steps: 500
     weight_decay: 0.01
