--- a/config/with_pretraining/config.yaml
+++ b/config/with_pretraining/config.yaml
@@ -4,14 +4,14 @@
 
 pretraining: 
   model_to_pretrain: "roberta-large"
-  dataset_path: "data/public_data/train/track_a/eng.csv"
+  dataset_path: "data/track_a/train/eng.csv"
   training:
     train_epochs: 50
     learning_rate: 0.00002 
     weight_decay: 0.01 
 
 classification: 
-  dataset_path: "data/public_data/train/track_a/eng.csv"
+  dataset_path: "data/track_a/train/eng.csv"
   training_set_split: 0.8
   custom: True # if custom is true an additional parameter "classifier_size", "drop_out_ratge", "head_type", "attention_dim", "num_attention_heads" and "classification_layer_count" have to be specified
   classifier_size: 768
@@ -20,7 +20,8 @@ classification:
   attention_dim: 128 
   num_attention_heads: 1
   classification_layer_count: 
-  extended_dataset: False # if extended_dataset is True an additional parameter "extended_split" has to be added 
+  extended_dataset: True # if extended_dataset is True an additional parameter "extended_split" has to be added 
+  extended_split: 0.2
   freeze_layers: False 
   freeze_to_layer: 12
   loRa: False 
@@ -28,8 +29,8 @@ classification:
   training:
     train_epochs: 30
     learning_rate: 0.00002
-    per_device_train_batch_size: 6
-    per_device_eval_batch_size: 6
+    per_device_train_batch_size: 32
+    per_device_eval_batch_size: 32
     warmup_steps: 500
     weight_decay: 0.01
 
